balances history: dark mode fix

--- a/styles/components/pagination.scss
+++ b/styles/components/pagination.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   background-color: var(--background-input);
   border: 1px solid var(--unaccent-icon);
+  color: var(--text-main);
   @media screen and (max-width: 920px) and (min-width: 440px) {
     margin-right: 0px;
     margin-left: auto;
